; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_workqueue.c_proc_set_wqptr.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_workqueue.c_proc_set_wqptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.workqueue = type { i32 }
%struct.proc = type { i32 }

@release = common dso_local global i32 0, align 4
@WQPTR_IS_INITING_VALUE = common dso_local global %struct.workqueue* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.proc*, %struct.workqueue*)* @proc_set_wqptr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @proc_set_wqptr(%struct.proc* %0, %struct.workqueue* %1) #0 {
  %3 = alloca %struct.proc*, align 8
  %4 = alloca %struct.workqueue*, align 8
  store %struct.proc* %0, %struct.proc** %3, align 8
  store %struct.workqueue* %1, %struct.workqueue** %4, align 8
  %5 = load %struct.proc*, %struct.proc** %3, align 8
  %6 = getelementptr inbounds %struct.proc, %struct.proc* %5, i32 0, i32 0
  %7 = load %struct.workqueue*, %struct.workqueue** %4, align 8
  %8 = load i32, i32* @release, align 4
  %9 = call %struct.workqueue* @os_atomic_xchg(i32* %6, %struct.workqueue* %7, i32 %8)
  store %struct.workqueue* %9, %struct.workqueue** %4, align 8
  %10 = load %struct.workqueue*, %struct.workqueue** %4, align 8
  %11 = load %struct.workqueue*, %struct.workqueue** @WQPTR_IS_INITING_VALUE, align 8
  %12 = icmp eq %struct.workqueue* %10, %11
  br i1 %12, label %13, label %21

13:                                               ; preds = %2
  %14 = load %struct.proc*, %struct.proc** %3, align 8
  %15 = call i32 @proc_lock(%struct.proc* %14)
  %16 = load %struct.proc*, %struct.proc** %3, align 8
  %17 = getelementptr inbounds %struct.proc, %struct.proc* %16, i32 0, i32 0
  %18 = call i32 @thread_wakeup(i32* %17)
  %19 = load %struct.proc*, %struct.proc** %3, align 8
  %20 = call i32 @proc_unlock(%struct.proc* %19)
  br label %21

21:                                               ; preds = %13, %2
  ret void
}

declare dso_local %struct.workqueue* @os_atomic_xchg(i32*, %struct.workqueue*, i32) #1

declare dso_local i32 @proc_lock(%struct.proc*) #1

declare dso_local i32 @thread_wakeup(i32*) #1

declare dso_local i32 @proc_unlock(%struct.proc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
